src/ui/product/stylesheet.styl
// Single-direction margin
*
	margin-bottom 0
*:first-child
	margin-top 0 !important

// General
html
	font 15px/20px inter
	font-feature-settings 'case', 'cv04', 'cv05', 'cv07', 'cv11', 'ss03', 'tnum'
*:focus
	outline-color gold

// Body
body
	padding-left calc(50% - 240px)
	margin 0

// Paragraphs
p
	margin 1em 0 0 0
hr
	background currentColor
	border 0
	height 1px
	margin 1em 0 0 0

// Formatted text
a
	color mediumslateblue
	text-decoration none
	overflow-wrap break-word
	&:visited
		color lightsteelblue
address
	font-style normal

// Verbatim text
blockquote
	border-left 2px solid gainsboro
	margin 1em 0 0 0
	opacity 0.75
	padding-inline-start 1ch
code
	font inherit
pre
	background repeating-linear-gradient(45deg, rgba(0,0,0,0.1), transparent 1px, transparent 0.5em), repeating-linear-gradient(-45deg, rgba(0,0,0,0.1), transparent 1px, transparent 0.5em)
	display inline-block
	font 12px 'roboto mono'
	white-space pre

// Spoilers
.md-spoiler-text
	background rgba(0,0,0,1)
	cursor text
	padding 0.05em 0
	opacity 0.5
	& a
		opacity 0
	&:hover
		background rgba(0,0,0,0.1)
		opacity 1
		& a
			opacity 1

// Lists
li
	margin 1em 0 0 0
menu
	margin 0
	padding 0
ol
ul
	margin 1em 0 0 0
	padding-inline-start 20px

// Headers
h1
h2
h3
h4
h5
h6
	font-size 1.16em
	font-weight bold
	margin 1em 0 0 0
h1
	font-size 1.33em

// Tables
table
	border-collapse collapse
	font-size 12px
	line-height 15px
	white-space pre-wrap
td
th
	padding 0.5em 2ch 0.5em 0
	vertical-align top
th
	text-align left

// Media
figure
	margin 0
iframe
	background black
	border 0
	border-radius 6px
img
	border-radius 6px
	display block
video
	background black
	border-radius 6px
	display block

// Interactive
button
	color inherit
	border 0
	cursor pointer
	font inherit
	letter-spacing inherit
	line-height inherit
	padding 0
	white-space pre
	word-spacing inherit
input
	border 0
	color inherit
	font inherit
	letter-spacing inherit
	line-height inherit
	margin 0
	padding 0
	white-space pre
	word-spacing inherit

// Fonts
@font-face
	font-family 'inter'
	font-style normal italic
	font-weight 100 900
	src url('./font_inter_var.woff2') format('woff2')

